# pencil-headers

./: .gitignore  Makefile.am  README  configure.ac
generate_pencil_headers/: .Makefile.swp  CMakeLists.txt  declarations.h  function.h  pencil_lib.h  pencil_stdlib.cpp  types.cpp
include/: Makefile.am  pencil.h  pencil_compat.h  pencil_cpp.h  pencil_cuda.h  pencil_host_c.h  pencil_host_impl.h  pencil_kernel_cl.h  pencil_lib.h  pencil_mathdecl.h  pencil_opencl.h  pencil_ppcg.h  pencil_prototypes.h  pencil_prototypes_prl.h
pencil_headers_generator/: Makefile  function.cpp  main.cpp  pencil_stdlib.h  types.h
